deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rh-helloworld
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rh-helloworld
  template:
    metadata:
      labels:
        app: rh-helloworld
    spec:
      containers:
      - name: rh-helloworld
        image: quay.io/hluong/helloworld-python:0.0.1-17
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
